Fixed navbar about button on mobile

--- a/client/src/components/Navbar/styles.css
+++ b/client/src/components/Navbar/styles.css
@@ -66,9 +66,13 @@
 }
 
 @media (max-width: 600px) {
-  .navbar {
+  .navbar-container {
     flex-direction: column;
     align-items: center;
+  }
+
+  .navbar-about {
+    margin-left: 8px;
   }
 
   .navbar-left {
